--- a/Mini_Projet/templates/base.html.twig
+++ b/Mini_Projet/templates/base.html.twig
@@ -30,7 +30,7 @@
             {% endif %}
             <li><a href="/register">Sign up</a></li>
         </ul>
-        <button class="btn btn-danger navbar-btn">?</button>
+        <button class="btn btn-danger navbar-btn"><a href="/admin">Admin</a></button>
     </div>
 </nav>
 
