--- a/Mini_Projet/templates/crypto/display_crypto.html.twig
+++ b/Mini_Projet/templates/crypto/display_crypto.html.twig
@@ -9,6 +9,7 @@
             <br>
             <tr>
                 <th> # </th>
+{#                <th> Image </th>#}
                 <th>Nom</th>
                 <th>Symbole</th>
                 <th>Prix</th>
@@ -23,6 +24,7 @@
             {% for crypto in cryptos %}
                 <tr>
                     <td>{{crypto.id}}</td>
+{#                    <td>{{crypto.image}}</td>#}
                     <td>{{crypto.nom}}</td>
                     <td>{{crypto.symbole}} </td>
                     <td>{{crypto.prix}}</td>
