--- a/Mini_Projet/templates/registration/register.html.twig
+++ b/Mini_Projet/templates/registration/register.html.twig
@@ -6,18 +6,34 @@
     <div class="container center">
         <h1>Inscription</h1>
         {{ form_start(registrationForm, {'attr': {'class': 'row'}}) }}
-        <div class="input-field col s12 m6 l6 offset-m3 offset-l3">
-            {{ form_widget(registrationForm.username, {'attr': {'placeholder': 'Nom d\'utilisateur'}}) }}
-            <span class="error">{{ form_errors(registrationForm.username) }}</span>
-        </div>
-        <div class="input-field col s12 m6 l6 offset-m3 offset-l3">
-            {{ form_widget(registrationForm.plainPassword, {'attr': {'placeholder': 'Mot de passe'}}) }}
-            <span class="error">{{ form_errors(registrationForm.plainPassword) }}</span>
-        </div>
-        <div class="input-field col s12">
-            <input type="submit" name="" class="btn btn-primary" value="M'inscrire">
-        </div>
+        <table>
+            <tr>
+                <td>Nom d'utilisateur</td>
+                <td>
+                    <div class="input-field col s12 m6 l6 offset-m3 offset-l3">
+                        {{ form_widget(registrationForm.username, {'attr': {'placeholder': ' '}}) }}
+                        <span class="error">{{ form_errors(registrationForm.username) }}</span>
+                    </div>
+                </td>
+            </tr>
+            <tr>
+                <td>Mot de passe</td>
+                <td>
+                    <div class="input-field col s12 m6 l6 offset-m3 offset-l3">
+                        {{ form_widget(registrationForm.plainPassword, {'attr': {'placeholder': ' '}}) }}
+                        <span class="error">{{ form_errors(registrationForm.plainPassword) }}</span>
+                    </div>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <div class="input-field col s12">
+                        <input type="submit" name="" class="btn btn-primary" value="M'inscrire">
+                    </div>
+                </td>
+            </tr>
         {{ form_end(registrationForm) }}
+        </table>
     </div>
 {#    {{ form_start(registrationForm) }}#}
 {#        {{ form_row(registrationForm.username) }}#}
