--- a/Mini_Projet/templates/admin/index.html.twig
+++ b/Mini_Projet/templates/admin/index.html.twig
@@ -7,43 +7,6 @@
         <div class="container">
             <table class="table table-striped">
                 <a href="{{ path('crypto_add') }}" class="btn btn blue darken-4" style="float: right">Ajouter</a>
-                <h3>Cryptomonnaie</h3>
-                <br>
-                <tr>
-                    <th> # </th>
-                    <th>Nom</th>
-                    <th>Symbole</th>
-                    <th>Actions </th>
-
-                </tr>
-
-                {% set i = 1 %}
-                {% for crypto in cryptos %}
-                    <tr>
-                        <td>{{i}}</td>
-{#                        <a href="{{ path('crypto_show', {'url': crypto.url}) }}" target="_blank"></a>#}
-                        <td>{{crypto.nom}}</td>
-{#                        <td>#}
-{#                                                                <span class="badge {{ crypto.visible ? 'blue' : 'red' }}">#}
-{#                                                                    {{ crypto.visible ? 'oui' : 'non' }}#}
-{#                                                                </span>#}
-{#                                                            </td>#}
-                        <td>{{crypto.symbole}} </td>
-                        <td>
-                            <a href="{{ path('crypto_edit', {'id': crypto.id}) }}">
-                            <i class="material-icons blue-text">edit</i>
-                            </a>
-
-                            <a href="{{ path('crypto_delete', {'id': crypto.id}) }}">
-                            <i class="material-icons red-text">delete</i>
-                            </a>
-                        </td>
-                    </tr>
-                    {% set i = i+1 %}
-                    {% endfor %}
-            </table>
-        </div>
-    </div>
 
     <div class="container mt-3">
         <h2> Utilisateurs </h2>
@@ -62,10 +25,18 @@
                     <td>{{j}}</td>
                     <td>{{user.username}}</td>
                     <td>
-
-                                    <span class="badge blue">
+                              {% for elem in user.roles %}
+                                 {% if elem == 'ROLE_ADMIN' %}
+                                    <span class="badge red">
                                         admin.
                                     </span>
+                                 {% else %}
+                                     <span class="badge blue">
+                                        user.
+                                    </span>
+                                {% endif %}
+                              {% endfor %}
+
                     </td>
                     <td>
                         <a href=""><i class="material-icons red-text">delete</i></a>
