--- a/Mini_Projet/templates/base.html.twig
+++ b/Mini_Projet/templates/base.html.twig
@@ -24,11 +24,14 @@
         <ul class="nav navbar-nav">
             <li class="active"><a href=/afficher>Home</a></li>
             {% if app.user %}
-                <li><a href=</logout>Logout</a></li>
+                <li><a href=</logout>Déconnexion</a></li>
+                <li><a href="/favs">Favoris</a></li>
             {% else %}
-                <li><a href="/login">Sign in</a></li>
+                <li><a href="/login">Connexion</a></li>
             {% endif %}
-            <li><a href="/register">Sign up</a></li>
+            <li><a href="/register">Créer compte</a></li>
+            <li class="active"><a href=/filtre>Filtrer</a></li>
+
         </ul>
         <button class="btn btn-danger navbar-btn"><a href="/admin">Admin</a></button>
     </div>
