--- a/Mini_Projet/templates/commentaire/index.html.twig
+++ b/Mini_Projet/templates/commentaire/index.html.twig
@@ -1,20 +1,15 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello CommentaireController!{% endblock %}
-
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+    {{form_start(formulaire)}}
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/Users/ELD1/PhpstormProjects/Mini_Projet/Mini_Projet/src/Controller/CommentaireController.php'|file_link(0) }}">src/Controller/CommentaireController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/Users/ELD1/PhpstormProjects/Mini_Projet/Mini_Projet/templates/commentaire/index.html.twig'|file_link(0) }}">templates/commentaire/index.html.twig</a></code></li>
-    </ul>
-</div>
+    {{form_widget(formulaire)}}
+
+
+    <div>
+        <button type="submit">Enregistrer Commentaire</button>
+    </div>
+
+    {{form_end(formulaire)}}
 {% endblock %}
