--- a/Mini_Projet/templates/crypto/fav.html.twig
+++ b/Mini_Projet/templates/crypto/fav.html.twig
@@ -1,40 +1,35 @@
 {% extends "base.html.twig" %}
 
-{% block title %}Accueil | {{ parent() }}{% endblock %}
+{% block title %}Favoris | {{ parent() }}{% endblock %}
 
 {% block body %}
     <div class="container mt-3">
-        <h2> Cours des Cryptomonnaies </h2>
+        <h2> Cryptomonnaies favorites </h2>
         <table class="table table-striped">
             <br>
             <tr>
                 <th> # </th>
-                <th> Image </th>
+                <th>Image</th>
                 <th>Nom</th>
                 <th>Symbole</th>
                 <th>Prix</th>
                 <th>Categorie</th>
-                <th>Description</th>
                 <th>MarketCup</th>
-                <th>Followers</th>
-
             </tr>
 
-
+            {% set j = 1 %}
             {% for crypto in cryptos %}
                 <tr>
-                    <td>{{crypto.id}}</td>
+                    <td>{{j}}  </td>
                     <td> <img alt="crypto icon" src={{crypto.image}} width="30" height="30"/></td>
-                    <td><a href="show/{{crypto.id}}"> {{crypto.nom}} </a></td>
+                    <td> <a href="show/{{crypto.id}}">{{crypto.nom}}</a></td>
                     <td>{{crypto.symbole}} </td>
                     <td>{{crypto.prix}}</td>
                     <td>{{crypto.categorie}} </td>
-                    <td>{{crypto.description}}</td>
                     <td>{{crypto.marketcup }}</td>
-                    <td>{{crypto.nbFollowers}}</td>
                 </tr>
 
-
+                {% set j = j+1 %}
 
             {% endfor %}
 
