--- a/Mini_Projet/templates/base.html.twig
+++ b/Mini_Projet/templates/base.html.twig
@@ -30,7 +30,7 @@
                 <li><a href="/login">Connexion</a></li>
             {% endif %}
             <li><a href="/register">Créer compte</a></li>
-            <li class="active"><a href=/filtre>Filtrer</a></li>
+            <li><a href=/filtre>Filtrer</a></li>
 
         </ul>
         <button class="btn btn-danger navbar-btn"><a href="/admin">Admin</a></button>
