--- a/Mini_Projet/templates/crypto/display_crypto.html.twig
+++ b/Mini_Projet/templates/crypto/display_crypto.html.twig
@@ -14,28 +14,27 @@
                 <th>Symbole</th>
                 <th>Prix</th>
                 <th>Categorie</th>
-                <th>Description</th>
+{#                <th>Description</th>#}
                 <th>MarketCup</th>
                 <th>Followers</th>
 
             </tr>
 
-
+            {% set j = 1 %}
             {% for crypto in cryptos %}
                 <tr>
-                    <td>{{crypto.id}}</td>
+                    <td>{{j}}</td>
                     <td> <img alt="crypto icon" src={{crypto.image}} width="30" height="30"/></td>
                     <td><a href="show/{{crypto.id}}"> {{crypto.nom}} </a></td>
                     <td>{{crypto.symbole}} </td>
                     <td>{{crypto.prix}}</td>
                     <td>{{crypto.categorie}} </td>
-                    <td>{{crypto.description}}</td>
+{#                    <td>{{crypto.description}}</td>#}
                     <td>{{crypto.marketcup }}</td>
                     <td>{{crypto.nbFollowers}}</td>
                 </tr>
 
-
-
+                {% set j = j+1 %}
             {% endfor %}
 
         </table>
