--- a/Mini_Projet/templates/crypto/display_crypto.html.twig
+++ b/Mini_Projet/templates/crypto/display_crypto.html.twig
@@ -16,7 +16,7 @@
                 <th>Categorie</th>
 {#                <th>Description</th>#}
                 <th>MarketCup</th>
-                <th>Followers</th>
+{#                <th>Followers</th>#}
 
             </tr>
 
@@ -31,7 +31,7 @@
                     <td>{{crypto.categorie}} </td>
 {#                    <td>{{crypto.description}}</td>#}
                     <td>{{crypto.marketcup }}</td>
-                    <td>{{crypto.nbFollowers}}</td>
+{#                    <td>{{crypto.nbFollowers}}</td>#}
                 </tr>
 
                 {% set j = j+1 %}
