--- a/Mini_Projet/templates/base.html.twig
+++ b/Mini_Projet/templates/base.html.twig
@@ -24,7 +24,7 @@
         <ul class="nav navbar-nav">
             <li class="active"><a href=/afficher>Home</a></li>
             {% if app.user %}
-                <li><a href=</logout>Déconnexion</a></li>
+                <li><a href="logout">Déconnexion</a></li>
                 <li><a href="/favs">Favoris</a></li>
             {% else %}
                 <li><a href="/login">Connexion</a></li>
