--- a/Mini_Projet/templates/crypto/filtreForm.html.twig
+++ b/Mini_Projet/templates/crypto/filtreForm.html.twig
@@ -42,22 +42,22 @@
                     </div>
                 </td>
             </tr>
-{#            <tr>#}
-{#                <td>Nombre de followers entre : </td>#}
-{#                <td>#}
-{#                    <div class="input-field col s12 m6 l6 offset-m3 offset-l3">#}
-{#                        {{ form_widget(RechercheForm.minNbFollowers, {'attr': {'placeholder': 'min'}}) }}#}
-{#                        <span class="error">{{ form_errors(RechercheForm.minNbFollowers) }}</span>#}
-{#                    </div>#}
-{#                </td>#}
-{#                <td> et </td>#}
-{#                <td>#}
-{#                    <div class="input-field col s12 m6 l6 offset-m3 offset-l3">#}
-{#                        {{ form_widget(RechercheForm.maxNbFollowers, {'attr': {'placeholder': 'max'}}) }}#}
-{#                        <span class="error">{{ form_errors(RechercheForm.maxNbFollowers) }}</span>#}
-{#                    </div>#}
-{#                </td>#}
-{#            </tr>#}
+            <tr>
+                <td>Nombre de followers entre : </td>
+                <td>
+                    <div class="input-field col s12 m6 l6 offset-m3 offset-l3">
+                        {{ form_widget(RechercheForm.minNbFollowers, {'attr': {'placeholder': 'min'}}) }}
+                        <span class="error">{{ form_errors(RechercheForm.minNbFollowers) }}</span>
+                    </div>
+                </td>
+                <td> et </td>
+                <td>
+                    <div class="input-field col s12 m6 l6 offset-m3 offset-l3">
+                        {{ form_widget(RechercheForm.maxNbFollowers, {'attr': {'placeholder': 'max'}}) }}
+                        <span class="error">{{ form_errors(RechercheForm.maxNbFollowers) }}</span>
+                    </div>
+                </td>
+            </tr>
             <tr>
                 <td>
                     <div class="input-field col s12">
