--- a/Mini_Projet/templates/base.html.twig
+++ b/Mini_Projet/templates/base.html.twig
@@ -31,6 +31,7 @@
             {% endif %}
             <li><a href="/register">Créer compte</a></li>
             <li><a href=/filtre>Filtrer</a></li>
+            <li><a href="/classe">Trier par classe</a></li>
 
         </ul>
         <button class="btn btn-danger navbar-btn"><a href="/admin">Admin</a></button>
